# mini-rust-examples

./: .gitignore  Cargo.toml
.serena/: project.yml
crates/anyverr/: Cargo.toml
crates/anyverr/src/: err.rs
crates/async-net/chat-room/src/: lib.rs
crates/async-net/ct-room/: Cargo.toml
crates/async-net/ct-room/src/: lib.rs  main.rs
crates/async-net/req-urls/: Cargo.toml
crates/async-net/req-urls/src/: config.rs  lib.rs
crates/async-net/tcp-echo/: Cargo.toml
crates/async-net/udp-echo/src/: lib.rs  main.rs
crates/chat-room/: Cargo.toml
crates/chat-room/src/: lib.rs  main.rs
crates/crypto-net/deal-file/: Cargo.toml
crates/crypto-net/deal-file/src/: main.rs
crates/crypto-net/en-de/: Cargo.toml  progress.md
crates/crypto-net/en-de/src/: lib.rs  stream.rs
crates/ct-room/src/: lib.rs
crates/httpclient/: Cargo.toml
crates/httpclient/src/: error.rs  lib.rs  main.rs
crates/httpclient/src/cmd/: args.rs
crates/httpclient/src/common/: header.rs
crates/httpclient/src/dns/: cache.rs  host.rs  local.rs  mod.rs  remote.rs
crates/httpclient/src/dns/remote/: mod.rs  query.rs  response.rs
crates/httpclient/src/request/: mod.rs
crates/httpclient/src/response/: mod.rs  status_code.rs
crates/httproxy/: Cargo.toml
crates/httproxy/src/: lib.rs  main.rs
crates/httproxy/src/cmd/: mod.rs
crates/httproxy/src/common/: mod.rs
crates/httproxy/src/init/: cmd.rs  mod.rs
crates/httproxy/src/init/shutdown/: ctrlc.rs  mod.rs
crates/httproxy/src/start/: mod.rs
crates/httpserver/: .gitignore  Cargo.toml
crates/httpserver/docs/: httpserver-io-analysis.md
crates/httpserver/src/: lib.rs  main.rs  utils.rs
crates/httpserver/src/app/init/: cmd.rs  mod.rs
crates/httpserver/src/cmd/: mod.rs
crates/httpserver/src/serve/: connection.rs  mod.rs  render.rs  shutdown.rs  static_files.rs  types.rs  url.rs
crates/httpserver/src/serve/common/: content_type.rs  header.rs  method.rs  mod.rs
crates/httpserver/src/serve/fs/: mod.rs  static_files.rs  types.rs
crates/httpserver/src/serve/http/: auth.rs  connection.rs  mod.rs
crates/httpserver/src/serve/request/: mod.rs  request_line.rs
crates/httpserver/src/serve/response/: header.rs  mod.rs  request_line.rs  status_line.rs
crates/httpserver/src/serve/router/: mod.rs  path.rs
crates/httpserver/src/serve/ui/: render.rs
crates/nettasks/: Cargo.toml
crates/nettasks/src/: const.rs  lib.rs  main.rs  min_http_client.rs
crates/nettasks/src/cmd/: args.rs  mod.rs
crates/nettasks/src/dns/: mod.rs
crates/nettasks/src/response/: status_line.rs
crates/req-urls/: Cargo.toml
crates/req-urls/src/: config.rs  lib.rs  main.rs
crates/rproxy/: .gitignore  Cargo.toml
crates/rproxy/src/: lib.rs  main.rs
crates/rproxy/src/cmd/: mod.rs
crates/rproxy/src/common/: mod.rs
crates/rproxy/src/init/: cmd.rs  logger.rs
crates/rproxy/src/start/: mod.rs
crates/tcp-echo/src/: lib.rs  main.rs
crates/udp-echo/: Cargo.toml
docs/: chunk-encryption-analysis.md  crypto-tasks-1.md  crypto-tasks.md  net-tasks.md  stream-encryption-implementation.md
test/: req_urls.json  text.md
