[package]
name = "async-net"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
anyverr = { workspace = true }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }


[workspace]
members = ["crates/async-net/*", "crates/crypto-net/*"]
resolver = "2"

[workspace.dependencies]
anyverr = { path = "./crates/anyverr" }

tokio = { version = "1", features = ["full"] }
reqwest = "0.12.23"
futures = "0.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

log = "0.4.28"
