[package]
name = "mini-rust-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
log = { workspace = true }
anyverr = { workspace = true }

futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }


[workspace]
members = ["crates/async-net/*", "crates/crypto-net/*", "crates/httpclient", "crates/httproxy", "crates/httpserver"]
resolver = "2"

[workspace.dependencies]
anyverr = { path = "./crates/anyverr" }

tokio = { version = "1", features = ["full"] }
reqwest = "0.12"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"

anyhow = "1"
chrono = {version = "0.4",default-features = false, features = ["alloc","clock","now"]}
ctrlc2 ={version = "3",default-features = false, features = ["async","termination"]} 
fern = {version = "0.7",default-features = false,features = ["chrono","colored"]}
mea = "0.5"
pastey = "0.2"
sarge ={ path = "/Users/unic/dev/projs/rs/sarge"}
smol = "2"

httparse ={ version = "1"}