[package]
name = "httpserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ctrlc2.workspace = true
fern.workspace = true
log.workspace = true
mea.workspace = true
minimime = "1"
pastey.workspace = true
sarge.workspace = true
smol.workspace = true
