[package]
name = "httpserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
ctrlc2.workspace = true
fern.workspace = true
futures.workspace = true
httparse.workspace = true
log.workspace = true
mea.workspace = true
pastey.workspace = true
sarge.workspace = true
smol.workspace = true

bytes = "1"
cmark-syntax = "0.6"
http-range = "0.1"
minimime = "1"
multer = "3"
